Overlapping in editing (mobile) fixed

--- a/app_client/src/components/ColumnChart/ColumnChart.css
+++ b/app_client/src/components/ColumnChart/ColumnChart.css
@@ -5,6 +5,7 @@
   margin: 0;
   max-width: 100vw;
   animation: grow 0.1s ease-in forwards;
+  z-index: -2;
 }
 
 .chart {
